--- a/.gitignore
+++ b/.gitignore
@@ -22,3 +22,9 @@ dist-ssr
 *.njsproj
 *.sln
 *.sw?
+
+# Mengabaikan file konfigurasi berisi kredensial
+config.json
+
+# Mengabaikan skrip auto upload
+auto_upload.sh
